# cnc_current_tracker-Service

./: .gitignore  CMakeLists.txt  README.md  Sample.mc  sample.h
CurrentTrackerAsService/: CMakeLists.txt  CurrentTrackerAsService.cpp
CurrentTrackerAsService/include/: CurrentTrackerAsService.h
EventReporter/: CMakeLists.txt  EventReporter.cpp
EventReporter/include/: event_reporter.h
currentTracker/: CMakeLists.txt  cnc_current_recorder.cpp  cnc_current_tracker.cpp
currentTracker/include/: cnc_current_recorder.h  cnc_current_tracker.h
sqlConnection/: CMakeLists.txt  sql_connection.cpp
sqlConnection/include/: sql_connection.h
